# 2025_20431425

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  experiment.txt  index.html  secret.txt
.github/workflows/: doxygen-deploy.yml
MyQtApp/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet3/: .gitignore  main.cpp  myfunctions.cpp  myfunctions.h
Worksheet3/Exercise3/: calc.cpp
Worksheet3/Exercise4/adder_static/include/: adder.h
Worksheet3/Exercise5/: libadder.exp
Worksheet3/Exercise5/adder_dynamic/include/: adder.h
Worksheet4/Exercise1/hello_cmake/: CMakeLists.txt
Worksheet4/Exercise3/Calc/: CMakeLists.txt  adder.cpp
Worksheet4/exercise_3/: CMakeLists.txt
Worksheet4/exercise_3/HelloLib/: Hello.h
Worksheet4/exercise_3/src/: main.cpp
Worksheet4/exercise_4/: CMakeLists.txt
Worksheet4/exercise_4/HelloLib/: CMakeLists.txt  Hello.cpp
Worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
Worksheet5/Exercise1/: CMakeLists.txt  adder.h
Worksheet7/Exercise1/: CylinderExample.cxx
Worksheet7/Exercise2/: .gitignore.txt
Worksheet7/Exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.ui
